--- a/JOTWEB/OIL/css/OIT0006D.css
+++ b/JOTWEB/OIL/css/OIT0006D.css
@@ -244,17 +244,17 @@ div[id^=pnlListArea] input[type=text][readonly]:not(.iconOnly):hover {
     background-image:none;
     box-shadow :none;
 }
-.boxIconArea div, .calendarIconArea div {
+div[id^=pnlListArea] .boxIconArea div, div[id^=pnlListArea] .calendarIconArea div {
     margin-top: calc(100% - 12.5px);
 }
 /* アイコン位置補正 */
 /* Chromeのみアイコンがテキストボックスの中央に行かないので補正 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-    .calendarIconArea div, .boxIconArea div {
+    div[id^=pnlListArea] .calendarIconArea div, div[id^=pnlListArea] .boxIconArea div {
         margin-top: calc(100% - 12px);
     }
 }
 /* Edgeも通ってしまうので打ち消す */
-_:-ms-lang(x)::backdrop, .calendarIconArea div, .boxIconArea div {
+_:-ms-lang(x)::backdrop, div[id^=pnlListArea] .calendarIconArea div, div[id^=pnlListArea] .boxIconArea div {
     margin-top: calc(100% - 12.5px);
 }
