--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1640,6 +1640,57 @@ span[class^="WF_DViewRep"] table td:nth-child(7n+1) span {
     white-space: nowrap; /* 折り返させない */
     text-overflow: ellipsis; /* 領域越を点々表示 */
 }
+/*  ----------------------------------  */
+/* タイル選択カスタムコントロールの設定 */
+/*  ----------------------------------  */
+.grc0001Wrapper input[type=checkbox]{
+    display:none;
+}
+.grc0001Wrapper input[type=checkbox] + label {
+    display:flex;
+    width:130px;
+    padding-left:5px;
+    padding-right:5px;
+    height:40px;
+    text-align :center;
+    justify-content:center;
+    align-items:center;
+    color:#737373;
+    border:2px solid rgb(91,155,213);
+    border-radius:5px;
+    margin-right:5px;
+    margin-bottom:5px;
+    font-weight:bold;
+    position:relative;
+}
+
+.grc0001Wrapper input[type=checkbox]:checked + label {
+    background-color:rgb(157,195,230);
+    color:rgb(255,255,255);
+}
+.grc0001Wrapper input[type=checkbox]:checked + label:before {
+    position:absolute;
+    left:2px;
+    content:"✔";
+    color:red;
+}
+.grc0001Wrapper input[type=checkbox] + label:hover {
+    cursor:pointer;
+    background-color:rgba(157,195,230,0.5);
+    color:#737373;
+}
+.grc0001Wrapper ul {
+    display: flex;
+    list-style: none;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width:450px;
+}
+
+.grc0001Settings {
+    display: none;
+}
+
 /*  ------------------------------  */
 /* ロード時のウェイトスタイル       */
 /*  ------------------------------  */
