タンク所在、トグル選択で一覧を切り替える

--- a/JOTWEB/OIL/css/OIT0005L.css
+++ b/JOTWEB/OIL/css/OIT0005L.css
@@ -19,3 +19,12 @@
     background-size: contain;
     background-image: url('../img/suitekiIcon.png');
 }
+.filterArea {
+    padding-left:10px;
+}
+.grc0001Wrapper ul {
+    width:600px
+}
+.grc0001Wrapper input[type=checkbox] + label {
+    width: 250px
+}
