--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -1,43 +1,7 @@
 ﻿/*ステータスボタン配置*/
-.inline-radio {
-    display: flex;
-    border-radius: 0.1em;
-    overflow: hidden;
-    border: 0.0625em solid #b6b6b6;
+.grc0001Wrapper ul {
+
 }
-
-.inline-radio div {
-    position: relative;
-    flex: 1;
+.grc0001Wrapper input[type=radio] + label {
+    width:165px;
 }
-
-.inline-radio input {
-    height: 50px;
-    width: 180px;
-    opacity: 0;
-}
-
-    .inline-radio label {
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: #b6b6b6;
-        width: 100%;
-        height: 100%;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        pointer-events: none;
-        /*  border-right: 0.1em solid #b6b6b6;*/
-    }
-
-    .inline-radio div:last-child label {
-        border-right: 0;
-    }
-
-    .inline-radio input:checked + label {
-        background: rgba(176, 176, 276, 0.6);
-        font-weight: 500;
-        color: #737373;
-    }
