--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -1647,10 +1647,12 @@ span[class^="WF_DViewRep"] table td:nth-child(7n+1) span {
 /*  ----------------------------------  */
 /* タイル選択カスタムコントロールの設定 */
 /*  ----------------------------------  */
-.grc0001Wrapper input[type=checkbox]{
-    display:none;
+.grc0001Wrapper input[type=checkbox],
+.grc0001Wrapper input[type=radio] {
+    display: none;
 }
-.grc0001Wrapper input[type=checkbox] + label {
+.grc0001Wrapper input[type=checkbox] + label,
+.grc0001Wrapper input[type=radio] + label{
     display:flex;
     width:130px;
     padding-left:5px;
@@ -1668,17 +1670,20 @@ span[class^="WF_DViewRep"] table td:nth-child(7n+1) span {
     position:relative;
 }
 
-.grc0001Wrapper input[type=checkbox]:checked + label {
+.grc0001Wrapper input[type=checkbox]:checked + label,
+.grc0001Wrapper input[type=radio]:checked + label{
     background-color:rgb(157,195,230);
     color:rgb(255,255,255);
 }
-.grc0001Wrapper input[type=checkbox]:checked + label:before {
+.grc0001Wrapper input[type=checkbox]:checked + label:before,
+.grc0001Wrapper input[type=radio]:checked + label:before{
     position:absolute;
     left:2px;
     content:"✔";
     color:red;
 }
-.grc0001Wrapper input[type=checkbox] + label:hover {
+.grc0001Wrapper input[type=checkbox] + label:hover,
+.grc0001Wrapper input[type=radio] + label:hover{
     cursor:pointer;
     background-color:rgba(157,195,230,0.5);
     color:#737373;
