在庫管理：OTの場合は受入数の入力を可能にする

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -486,6 +486,7 @@ span.morningStockIdx0 {
 }
 #divStockList input[type=text][name$="txtSend"],
 #divStockList input[type=number][name$="txtSend"],
+#divStockList input[type=text][name$="txtReceive"],
 #divStockList input[type=text][name$="txtReceiveFromLorry"],
 #divStockList input[type=number][name$="txtReceiveFromLorry"] {
     width: calc(100% + 5.5px);
