参照モード時のガイダンス画面微調整

--- a/JOTWEB/OIL/css/OIM0020C.css
+++ b/JOTWEB/OIL/css/OIM0020C.css
@@ -123,6 +123,7 @@ form[REFONLY] .grc0001Wrapper input:checked + label {
 }
 form[REFONLY] .attachmentCell input[type=button],
 form[REFONLY] .attachmentCell hr,
+form[REFONLY] .attachmentCell #uploadLineText,
 form[REFONLY] .attachmentCell span.delAttachment {
     display: none;
 }
