ログイン、メニューのガイダンス内容につき改行を<br />に変換し 表示し改行して見えるよう変更※幅オーバーは折り返されます

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -219,6 +219,7 @@ a[id^="Menu_"] input[type=submit] {
     padding: 5px;
     padding-top: 2px;
     padding-bottom: 2px;
+    vertical-align :top;
 }
 div.showGuidance a[id^="Menu_"] {
     height: calc(50% - 50px);
