在庫指摘対応４つまで

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -813,3 +813,18 @@ _:-ms-lang(x)::backdrop,
 /* ************************ */
 /* ↑ボタン固定ここまで↑   */
 /* ************************ */
+/* ************************ */
+/* ↓油槽所選択ここから↓   */
+/* ************************ */
+#selHeadConsignee {
+    height: 17.5px;
+    line-height: 17.5px;
+    outline: none;
+    font-size:11.5px;
+}
+#selHeadConsignee option {
+    outline: none;
+}
+/* ************************ */
+/* ↑油槽所選択ここまで↑   */
+/* ************************ */
