メニューガイドラインのhttp://～ or https://～ を自動的にリンクになるようにしてみました。

--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -54,6 +54,13 @@
 #divSuggestList div.leftColumn div:nth-child(1) {
     height:calc(24px * 3);
 }
+#pnlSuggestList[data-otmode] #divSuggestList div.leftColumn div:nth-child(1) {
+    height: calc(24px * 2);
+}
+#pnlSuggestList[data-otmode] #divSuggestList > div.oilTypeColumn > div:nth-child(3),
+#pnlSuggestList[data-otmode] #divSuggestList > div.dataColumn > div.values > div:nth-child(2) {
+    display: none;
+}
 /* 提案表直下のDivタグ */
 #divSuggestList > div {
     width: 80px;
@@ -247,6 +254,10 @@
 }
 #divSuggestList .lockImgArea.Unlocked:hover {
     background-image:  url('../img/lockKey.png');
+}
+#pnlSuggestList[data-otmode] #divSuggestList .lockImgArea {
+    background-image:none;
+    display:none;
 }
 /* *********************** */
 /* 比重表 設定             */
