--- a/JOTWEB/OIL/css/OIT0004C.css
+++ b/JOTWEB/OIL/css/OIT0004C.css
@@ -839,3 +839,48 @@ _:-ms-lang(x)::backdrop,
 /* ************************ */
 /* ↑油槽所選択ここまで↑   */
 /* ************************ */
+/* ********************************** */
+/* ↓帳票設定ポップアップここから↓   */
+/* ********************************** */
+#reportSettingsWrapper {
+    position: fixed;
+    z-index: 9950;
+    background-color: rgba(55, 55, 55, 0.6);
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    max-height: 100vh;
+    display: none;
+    margin-bottom:-10px;
+    top: 0;
+    left: 0;
+    bottom:0;
+    overflow: auto;
+}
+#reportSetting {
+    background-color: rgb(240,240,240);
+    box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
+    height: auto;
+    min-height: 300px;
+    width:500px;
+    min-width:500px;
+    margin-left:calc(50vw - 250px);
+    margin-top:calc(10vh);
+    //border: 1px solid black;
+    border-radius: 5px;
+}
+#reportSetting > div:nth-child(1) {
+    font-weight:bold;
+    width:100%;
+    height:20px;
+    background:linear-gradient(to bottom, #8BACCD, rgb(240,240,240));
+    border-top-left-radius:5px;
+    border-top-right-radius:5px;
+}
+#reportSetting > div {
+    padding:10px;
+    box-sizing :border-box;
+}
+/* ********************************** */
+/* ↑帳票設定ポップアップここまで↑   */
+/* ********************************** */
