--- a/JOTWEB/OIL/OILMasterPage.Master
+++ b/JOTWEB/OIL/OILMasterPage.Master
@@ -52,6 +52,19 @@
             <%-- コンテンツ領域 --%>
             <div id="divContensbox">
                 <asp:ContentPlaceHolder ID="contents1" runat="server" />
+                <%-- 共通ポップアップ用 --%>
+                <div id="divContentsPopUpWrapper">
+                    <div id="divContentsPopUp">
+                        <div class="popUpTitle"><asp:ContentPlaceHolder ID="contentsPopUpTitle" runat="server"></asp:ContentPlaceHolder></div>
+                        <div class="popUpButtons">
+                            <input type="button" id="WF_ButtonOkCommonPopUp"     class="btn-sticky" value="OK"  onclick="ButtonClick('WF_ButtonOkCommonPopUp');" />
+                            <input type="button" id="WF_ButtonCancelCommonPopUp" class="btn-sticky" value="ｷｬﾝｾﾙ" onclick="commonHideCustomPopup();" />
+                        </div>
+                        <div class="popUpContents">
+                            <asp:ContentPlaceHolder ID="contentsPopUpInside" runat="server"></asp:ContentPlaceHolder>
+                        </div>
+                    </div>
+                </div>
             </div>
             <%-- FOOTER --%>
             <MSINC:footer id="footer" runat="server" />
@@ -85,6 +98,8 @@
                 <asp:HiddenField ID="MF_AGAIN" runat="server" Value="FALSE" />      <%-- 確認ポップアップ再実行イベント --%>
                 <asp:HiddenField ID="MF_ALT_MSG" runat="server" Value="FALSE" />    <%-- 確認ポップアップ表示メッセージ --%>
                 <asp:HiddenField ID="MF_ALERT" runat="server" Value="FALSE" />      <%-- 確認ポップアップ処理可能 --%>
+
+                <asp:HiddenField ID="MF_SHOWCUSTOMOPOUP" runat="server" Value="0" />      <%-- カスタムポップアップ表示(0:非表示,1:表示) --%>
             </div>
         </div>
     </form>
