20200605_受注明細画面(タンク車を割当ると発送状態となるので、タンク車の変更及び交検日の変更を許可しないようにする)動作改善 20200605_受注一覧画面(帳票ボタン)編集中

--- a/JOTWEB/OIL/css/OIT0003L.css
+++ b/JOTWEB/OIL/css/OIT0003L.css
@@ -29,8 +29,8 @@ div[data-generated="1"] td:nth-child(4) {
 .headerboxOnly {
     min-width: 750px; /* (共通指定 650pxだと小さすぎる為) */
 }
-#txtReportFromDate,
-#txtReportToDate {
+/* 帳票ポップアップ個別指定*/
+#txtReportLodDate{
     width: 150px !important;
 }
 
