--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -144,6 +144,7 @@ input[type=number]:focus,
 textarea:focus {
     border-color: rgba(1,60,65, .5);
     background-image:none;
+    outline:none;
     //box-shadow: 0 0 5px 1px rgba(218,60,65, .5);
 }
 input[type=text][disabled]:hover,
