--- a/JOTWEB/OIL/css/OIT0003D.css
+++ b/JOTWEB/OIL/css/OIT0003D.css
@@ -164,11 +164,13 @@ _:-ms-lang(x)::backdrop, .calendarIconArea div, .boxIconArea div {
     border-radius:0;
     text-align:right;
 }
+/* 20200623(全体)No78対応*/
 /* 車数の非活性時のスタイル */
 .summaryTable input[type=text]:disabled {
-    background-color:darkgrey;
+    background-color:dimgray;
     color:black
 }
+
 /* 各金額合計表 */
 .summaryAmount {
     box-sizing: border-box;
