20200702_指摘票対応(No92)対応

--- a/JOTWEB/OIL/css/OIT0003L.css
+++ b/JOTWEB/OIL/css/OIT0003L.css
@@ -33,7 +33,13 @@ div[data-generated="1"] td:nth-child(4) {
 #txtReportLodDate{
     width: 150px !important;
 }
+#txtReportRTrainNo {
+    width: 150px !important;
+}
 
 .calendarIconArea div {
+    margin-top: calc(100% - 14px) !important;
+}
+.boxIconArea div {
     margin-top: calc(100% - 14px) !important;
 }
