--- a/JOTWEB/OIL/css/M00001V2.css
+++ b/JOTWEB/OIL/css/M00001V2.css
@@ -38,7 +38,7 @@
 }
 .guidance {
     padding-top:5px;
-    height: 100px;
+    height: 150px;
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
@@ -198,7 +198,7 @@ div.parentMenu > input[type=checkbox]:checked + label + div {
 /* ガイダンスの設定       */
 /* ********************** */
 #guidanceList {
-    height: calc(100px - 2px);
+    height: calc(110px - 2px);
     width: calc(100% - 2px);
     //border: solid 1px gray;
     border-radius: 2px;
@@ -210,13 +210,14 @@ div.parentMenu > input[type=checkbox]:checked + label + div {
 #guidanceOpenCloseWrapper {
     width: 100%;
     text-align: center;
-    position: absolute;
-    bottom:8px;
+    //position: absolute;
+    //bottom:8px;
+    height:10px;
 }
 #guidanceOpenClose {
-    position: fixed;
-    left: calc(50% - 100px);
-    z-index: 31;
+    //position: fixed;
+    //left: calc(50% - 100px);
+    //z-index: 31;
 }
 /* ガイダンス表示非表示が左ナビボタンに貫通しないよう調整 */
 @media all and (max-width: 710px) {
@@ -273,12 +274,35 @@ div.showGuidance a[id^="Menu_"] {
     content: " ";
     background-image: url('../img/guidanceIconI.png');
 }
+/* ************************** */
 /* ペインリストの共通デザイン */
+/* ************************** */
+/* 大枠はフレックスとする*/
 #paneList {
+    width :100%;
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
 }
 #paneList * {
     box-sizing :border-box;
+}
+.menuPaneItem {
+    overflow:hidden;
+}
+/* ３列幅を使うペイン設定 */
+.menuPaneItem.paneWidth3 {
+    width: 1000px;
+    min-width:1000px;
+    max-width: 1000px;
+}
+.menuPaneItem.paneWidth2 {
+    width: calc(1000px / 2);
+    min-width: calc(1000px / 2);
+    max-width: calc(1000px / 2);
+}
+.menuPaneItem.paneWidth1 {
+    width: calc(1000px / 3);
+    min-width: calc(1000px / 3);
+    max-width: calc(1000px / 3);
 }
