在庫、受注登録時に再度同オペレーションをすると重複で別オーダーが作成される問題FIX

--- a/JOTWEB/OIL/css/M00001V2.css
+++ b/JOTWEB/OIL/css/M00001V2.css
@@ -338,7 +338,7 @@ div.showGuidance a[id^="Menu_"] {
     background-size: 32px 32px;
     background-repeat: no-repeat;
     background-image: url('../img/menuPaneRefresh.png');
-    
+    position:absolute;
 }
 .paneTitleRefresh {
     width: 32px;
@@ -347,6 +347,7 @@ div.showGuidance a[id^="Menu_"] {
     border-radius: 5px;
     user-select :none;
     overflow:hidden;
+    position:relative;
 }
 .paneTitleRefresh:hover {
     border: 1px solid darkgray;
