20200731_指摘票対応(No115)全体※一時保存

--- a/JOTWEB/OIL/css/OIT0002D.css
+++ b/JOTWEB/OIL/css/OIT0002D.css
@@ -130,3 +130,15 @@
 #TxtHeadOfficeTrain {
     width: 100%;
 }
+
+/* 一覧表ヘッダー部の２行補正 */
+/* 左ヘッダー行スタイル,右ヘッダー行スタイル*/
+div[data-generated="1"] div[id$="_HR"] table tr,
+div[data-generated="1"] div[id$="_HL"] table tr {
+    height: 37px;
+}
+/* 左(固定データテーブル用)DIV,右(可変データテーブル用)DIV */
+div[data-generated="1"] div[id$="_DL"],
+div[data-generated="1"] div[id$="_DR"] {
+    top: 37px; /* ヘッダー行スタイルのheightに合わせる */
+}
