月間輸送数量ペインの率マイナスを△表記

--- a/JOTWEB/OIL/css/M00001.css
+++ b/JOTWEB/OIL/css/M00001.css
@@ -439,6 +439,12 @@ div.showGuidance a[id^="Menu_"] {
     margin: 5px;
     font-size: 20px;
 }
+/* マイナス */
+.paneContent span.minus:before {
+    content: "\025B3";
+    color:red;
+    font-weight:bolder;
+}
 /* ******************** */
 /* 締状況ペイン個別 */
 /* ******************** */
